# Prograsec_Company_Workk

./: .env  README.md  langchain.txt  requirements.txt
Cruds/: main.py  pyproject.toml
Cruds/config/: database.py
Cruds/models/: department.py  students.py
Cruds/repository/: department_repository.py  student_repository.py
Cruds/router/: api.py
Cruds/router/v1/: depratment.py  student.py
Cruds/schemas/: department_schemas.py  student_schemas.py
Cruds/services/: depratment_services.py  student_service.py
Cruds/utills/: auth.py  init_db.py
LangChain/: Geimini.ipynb  LLM_Arm_Zindagi.ipynb  chatbot.py  prompt_templates.py
LangChain/Output_Parse/: with_strcutured_output_dict.ipynb  with_structure_ouput_json_scheme.ipynb  with_structure_ouput_pydantic.ipynb
LangChain/Runnabels/: branch_runnables.ipynb  lambda_runnables.ipynb  parallel_runnables.ipynb  passthrough_runnables.ipynb  sqeuence_runnables.ipynb
LangChain/chain/: condition_chain.ipynb  parallel_chain.ipynb  sequential_chain.ipynb  simple_chain.ipynb
LangChain/document_loader/: csv_loader.py  directory_loader.py  pdf_loader.py  text_loader.py  webbased_loader.py
LangChain/models/: Geimini.ipynb  groq.ipynb
LangChain/templates/: chat_bot_template.ipynb  message_placeholderr.ipynb  prompt_template.ipynb
LangChain/text_splitter/: length_based.py  python_code_splitter.py  semantic_meaning_based.py  text_structure_based.py
NLP/: Label_Encoding.ipynb  bags_of_words.ipynb  data.ipynb  one_hot_encoding.ipynb  pyproject.toml  stop_words.ipynb  tf_id.ipynb
(+4 files in other folders)
